core/src/main/resources/css/mdModuleManager.css
.moduleManagerContainer [type="checkbox"].filled-in:not(:checked) + label:after {
    border: 2px solid #9c9c9c;
    top: 2px;
}

.moduleManagerContainer [type="checkbox"].filled-in:checked + label:after {
    border: 2px solid #00bcd4;
    background-color: #00bcd4;
    top: 2px;
}

.moduleManagerContainer [type="checkbox"].filled-in:checked + label:before {
    top: 2px;
}

.moduleManagerContainer div.material-table {
    padding: 0;
}

.moduleManagerContainer div.material-table table {
    table-layout: fixed;
    margin-bottom: 0;
}

.moduleManagerContainer div.material-table table tbody tr {
    cursor: pointer;
}

.moduleManagerContainer div.material-table table tr td {
    height: 48px;
    font-size: 13px;
    color: rgba(0, 0, 0, 0.87);
    border-bottom: solid 0 #DDDDDD;
    text-overflow: ellipsis;
    vertical-align: middle;
    white-space: normal;
    font-weight: 400;
}

.moduleManagerContainer div.material-table table tr td a {
    color: inherit;
}

.moduleManagerContainer div.material-table table tr td a i {
    font-size: 18px;
    color: rgba(0, 0, 0, 0.54);
}

.moduleManagerContainer div.material-table table tr {
    font-size: 12px;
}

.moduleManagerContainer div.material-table table th {
    cursor: pointer;
    white-space: nowrap;
    height: 56px;
    vertical-align: middle;
    outline: none !important;
}

.moduleManagerContainer div.material-table table th:first-child,
.moduleManagerContainer div.material-table table td:first-child {
    padding: 0 0 0 24px;
}

.moduleManagerContainer div.material-table table th:last-child,
.moduleManagerContainer div.material-table table td:last-child {
    padding: 0 14px 0 0;
}

.moduleManagerContainer td.dataTables_empty {
    text-align: center;
    text-transform: uppercase;
    font-weight: 600;
    color: rgba(0, 0, 0, 0.34) !important;
}

.moduleManagerContainer .material-pagination {
    margin-bottom: 0;
}

.moduleManagerContainer .material-pagination li.disabled {
    opacity: 0.6;
}

.moduleManagerContainer .material-pagination li.disabled a {
    cursor: not-allowed !important;
    pointer-events: all !important;
}

.moduleManagerContainer .started-label {
    background-color: transparent !important;
    color: #4CAF50;
    font-weight: 600;
}

.moduleManagerContainer .inactive-label {
    color: rgba(0, 0, 0, 0.52);
}

.moduleManagerContainer .dataTables_filter {
    float: left;
    text-align: left;
    margin-top: 0 !important;
}

.moduleManagerContainer .searchBox > div {
    width: 100%;
    padding-bottom: 0 !important;
    margin-bottom: 0 !important;
}

.moduleManagerContainer .searchBox > div > label {
    display: inline-flex;
    align-items: center;
    width: 100%;
    margin: 8px 0 8px 0;
}

.moduleManagerContainer .searchBox > div > label > input::placeholder {
    font-size: 15px !important;
}

.moduleManagerContainer .searchBox > div > label > input {
    width: 95% !important;
    margin-left: 0 !important;
    margin-bottom: 0 !important;
    font-size: 15px !important;
    padding: 5px  !important;
}

.moduleManagerContainer .no-padding {
    padding: 0 !important;
}

.moduleManagerContainer .no-font-weight {
    font-weight: 100 !important;
}

.moduleManagerContainer table.no-pointer tr,th {
    cursor: default !important;
}

.moduleManagerContainer div.row {
    margin-right: 0;
    margin-left: 0;
}

.moduleManagerContainer .pagination > li > a, .pagination > li > span {
    border: 0 solid #ddd !important;
}

.moduleManagerContainer .lip {
    display: inline-flex;
    margin: 10px;
}

.moduleManagerContainer .lip > div {
    margin-left: 10px;
    margin-right: 10px;
}

.moduleManagerContainer .dataTables_length label select {
    display: inline !important;
}

.moduleManagerContainer .dataTables_length {
    margin-top: 0 !important;
}

.moduleManagerContainer .dataTables_paginate ul {
    list-style-type: none !important;
    display: inline-flex;
    margin-top: 5px;
}

.moduleManagerContainer h5.cardTitle {
    font-size: 16px;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.52);
    margin-top: 40px;
}

.moduleManagerContainer .card.moduleInfoCard {
    display: inline-flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    padding: 16px;
    margin-bottom: 40px;
}

.moduleManagerContainer .card {
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    margin-bottom: 32px;
}

.moduleManagerContainer div.infoItem {
    flex: 25%;
    margin: 4px;
}

.moduleManagerContainer div.infoItem > h6 {
    font-size: 16px;
    font-weight: 500;
    color: rgba(0, 0, 0, 0.84);
}

.moduleManagerContainer .chip:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

.moduleManagerContainer .chip {
    cursor: pointer;
    background: rgb(224, 224, 224);
    color: rgb(66, 66, 66);
    border-radius: 16px;
    min-height: 32px;
    line-height: 30px;
    margin: 2px 8px 2px 8px;
    padding: 0 1px 2px 8px;
    float: left;
    box-sizing: border-box;
    max-width: 100%;
    position: relative;
    font-size: 15px;
    font-weight: 400;
    display: inline-flex;
}

.moduleManagerContainer .chip > small {
    margin-left: 8px;
    margin-right: 8px;
}

.moduleManagerContainer .moduleChipContainer {
    display: inline-flex;
}

.moduleManagerContainer .moduleChip {
    background: #e0e0e0;
    border: none;
    border-radius: 50px;
    padding: 4px 14px;
    font-weight: 500;
    margin: 2px 4px;
}

.moduleManagerContainer .moduleChip:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

.moduleManagerContainer button.chip {
    padding-left: 8px;
    padding-right: 8px;
    text-align: center;
    display:table-cell;
    vertical-align:middle;
}


.moduleManagerContainer .no-ver-margin {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}

.moduleManagerContainer .togglebutton > label {
    font-size: 10pt;
}

.moduleManagerContainer .actions {
    position: relative;
    display: inline-flex;
    align-items: center;
}

.moduleManagerContainer .refreshModule button {
    padding: 10px;
}

.moduleManagerContainer button.backBtn {
    padding: 10px;
    color: #fff !important;
}

.moduleManagerContainer .updateNotif {
    background: #607D8B;
    color: #fff;
}

.moduleManagerContainer .autoStartModule {
    margin: 20px 0 10px 10px;
}

.moduleManagerContainer .devOptions {
    padding: 16px;
}

.moduleManagerContainer .devOptions span {
    padding-right: 10px;
}

.moduleManagerContainer .cyan {
    background-color: #00bcd4 !important;
    color: #fff !important;
}

.moduleManagerContainer .searchBox input.form-control {
    background-image: none !important;
}

.moduleManagerContainer .pull-item-bottom {
    display: flex;
    align-items: flex-end;
    margin-bottom: 8px;
}

.moduleManagerContainer .checkbox label {
    margin-left: 8px;
}

.moduleManagerContainer #moduleFilename {
    display: inline-flex;
    min-height: 48px;
    margin:0;
    align-items: center;
}

.moduleManagerContainer #moduleFilename span {
    max-width:50vw;
    text-overflow: ellipsis;
    vertical-align: middle;
    white-space: normal;
    word-wrap: break-word;
    align-items: center;
    margin-right: 8px;
}

.moduleManagerContainer .breakWord {
    word-break: break-word;
}

.moduleManagerContainer .removeModuleUploadFile {
    color: #F44336;
}

.black-text {
    color: rgba(0, 0, 0, 0.87) !important;
}

.moduleManagerContainer .checkbox input[type=checkbox]:checked + .checkbox-material .check,
.moduleManagerContainer label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check {
    color: #017caf;
    border-color: #017caf;
}

.moduleManagerContainer .checkbox input[type=checkbox]:checked + .checkbox-material .check:before,
.moduleManagerContainer label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check:before {
    color: #017caf;
}

.moduleManagerContainer .togglebutton label input[type=checkbox]:checked + .toggle:after {
    background-color: #017caf;
}

.moduleManagerContainer .togglebutton label input[type=checkbox]:checked + .toggle {
    background-color: rgba(2, 124, 174, 0.59);
}

.aligned-spacing-top-left{
    padding: 24px 0px 0px 16px;
}

.paginate_button a{
    color: #337ab7!important;
}

